# artifact-generator

./: LICENSE  pyproject.toml
artifact_gen/: artifact_utils.py  vppr_artifacts.py
