[project]
name = "artifact-gen"
version = "0.1.1"
description = ""
authors = [
    {name = "Rich McKnight",email = "r@richmcknight.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
